<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.journey.activity.BroadcastCompA">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/my_toolbar"
        android:id="@id/my_toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@id/broadcast_usage"
            android:text="@string/broadcast_usage"
            style="@style/module_tv_item"
            android:layout_marginTop="@dimen/space_8"/>
        <TextView
            android:id="@id/broadcast_notification"
            android:text="@string/broadcast_notification"
            style="@style/module_tv_item"/>
        <TextView
            android:id="@id/broadcast_listen_sms"
            android:text="@string/broadcast_listen_sms"
            style="@style/module_tv_item"/>
        <TextView
            android:id="@id/broadcast_listen_telephone"
            android:text="@string/broadcast_listen_telephone"
            style="@style/module_tv_item"/>

    </LinearLayout>

</LinearLayout>
