<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.journey.activity.AudioSoundsA"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/my_toolbar"
        android:id="@id/my_toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@id/button_start"
            android:text="@string/button_start"
            style="@style/module_tv_item"
            android:layout_marginTop="@dimen/space_8"/>
        <TextView
            android:id="@id/button_stop"
            android:text="@string/button_stop"
            style="@style/module_tv_item"/>
        <TextView
            android:id="@id/button_sound_up"
            android:text="@string/button_sound_up"
            style="@style/module_tv_item"
            />
        <TextView
            android:id="@id/button_sound_down"
            android:text="@string/button_sound_down"
            style="@style/module_tv_item"
           />
        <ToggleButton
            android:id="@id/button_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
